# stark-snark-recursive-proofs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  circom.sh  clean.sh  compile.sh  dbg.circom  generate_parameters_grain.sage.py  input.json  log.txt  param.circom  parameters.circom  poseidon.circom  power5.circom  prove.sh  rnd.sage  rnd.sage.py  stark.json  sum_verifier.circom  verify.sh  witness.sh
air/: basic.circom
air/src/: options.rs
circom/: fri.circom  input.json  merkle.circom  ood_consistency_check.circom  ood_consitency_check.circom  public_coin.circom  rnd.sage  utils.circom  verify.circom
circom-prover/: Cargo.toml  README.md  build.rs
circom-prover/src/: air.rs  circom.rs  circom_main.rs  json.rs  lib.rs  main.rs  prover.rs  tests.rs  utils.rs  verification.rs
circom-prover/src/sum/: air.rs  main.rs  prove.rs  prover.rs  verify.rs
circom/poseidon/: compute_parameters.sage  generate_parameters_grain.sage.py  poseidon.circom
circom/utils/: bitify.circom  switcher.circom
circuits/: fri.circom  merkle.circom  ood_consistency_check.circom  public_coin.circom  utils.circom  verify.circom
circuits/air/: sum.circom
circuits/poseidon/: generate_parameters_grain.sage.py  param.circom  poseidon.circom
circuits/utils/: arithmetic.circom  arrays.circom  assertions.circom  bits.circom  comparators.circom  duplicates.circom  polynoms.circom  powers.circom
crypto/benches/: hash.rs
crypto/src/: lib.rs
crypto/src/hash/: mod.rs
crypto/src/hash/poseidon/: Makefile  digest.rs  generate_parameters_grain.sage.py  generate_parameters_grain.sage_save.py  mod.rs  param.rs  poseidon.rs  poseidon_opti.rs  poseidonperm_x3_64_24_optimized.sage  poseidonperm_x3_64_24_optimized.sage.py  test_parameters.py  tests.rs
crypto/src/merkle/: proofs.rs  tests.rs
examples/: Cargo.toml
examples/benches/: basic.rs
examples/src/: lib.rs  main.rs  tests.rs
examples/src/basic/: air.rs  mod.rs  prover.rs  tests.rs
examples/src/sum/: air.rs  mod.rs  prover.rs  tests.rs
examples/sum/: Cargo.toml
examples/sum/src/: air.rs  compile.rs  main.rs  prove.rs  prover.rs  verify.rs
math/: Cargo.toml
math/src/: lib.rs
math/src/field/: mod.rs
math/src/field/f256/: mod.rs  tests.rs  u256.rs  u512.rs
prover/src/: lib.rs
verifier/src/: lib.rs
winterfell/crypto/src/hash/poseidon/: Makefile  generate_parameters_grain.sage.py  mod.rs  param.rs  poseidon.rs  tests.rs
winterfell/crypto/src/merkle/: proofs.rs  tests.rs
winterfell/math/benches/: field.rs
winterfell/math/src/field/f256/: tests.rs  u256.rs
winterfell/prover/src/: lib.rs
winterfell/prover/src/trace/: mod.rs
winterfell/verifier/src/: lib.rs
