[workspace]
members = [
  "winterfell/utils/core",
  "winterfell/utils/rand",
  "winterfell/math",
  "winterfell/crypto",
  "winterfell/fri",
  "winterfell/air",
  "winterfell/prover",
  "winterfell/verifier",
  "winterfell/winterfell",
  "circom-prover",
  "examples/sum"
]


[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
