[package]
name = "winter-circom-prover"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[features]
std = ["winterfell/std", "serde/std", "serde_json/std"]
default = ["std"]
concurrent = ["std", "winterfell/concurrent"]

[dependencies]
rug = "1.16"
winterfell = { version = "0.4.0", default-features = false, path = "../winterfell/winterfell" }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
